<resources>
    <string name="app_name">Dishes</string>
    <string name="text_label1">Главная</string>
    <string name="text_label2">Поиск</string>
    <string name="text_header1">Рецепты</string>
    <string name="text_view1">Категории</string>
    <string name="text_view2">Избранное</string>
    <string name="start_header">Dishes</string>
    <string name="start_text">Привет, вы установили приложение, которое представляет собой книгу рецептов.</string>
    <string name="start_text2">Здесь вы найдете все подходящие для себя рецепты и сможете их сохранить.\n\nАвтор приложения: Артём Брешенков</string>
    <string name="start_btn">Начать</string>
    <string name="mainscreenlogo">Пора Готовить</string>
    <string name="searchtext">Поиск...</string>
    <string name="saladtext">Салаты</string>
    <string name="snackstext">Закуски</string>
    <string name="hottext">Горячее</string>
    <string name="souptext">Супы</string>
    <string name="allRecept">Рецепты</string>
    <string name="viewAll">Смотреть все</string>
    <string name="loveRecept">Избранное</string>
    <string name="acceptBtn">Понятно!</string>
    <string name="info_text">В данном приложении вы можете найти нужное вам блюдо, которое будет иметь полный рецепт для его приготовления.</string>
    <string name="info_text2">Вы можете выполнить поиск по нужному блюду.\nТак же вы можете добавить понравившийся рецепт в Избранное.</string>



</resources>