<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen"
    android:orientation="vertical"
    android:background="#f2f5f8">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ico_menu"
            android:layout_centerVertical="true"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ico_add"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:background="#F1E9CE"/>
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/maintitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/almendra_bold"
            android:text="@string/mainscreenlogo"
            android:textSize="28sp" />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/maintitle"
            android:background="@color/white"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:elevation="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/searchtext"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ico_search"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"/>


        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/card1"
                android:elevation="8dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ico_salad"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="@string/saladtext"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/card2"
                android:elevation="8dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ico_snacks" />

            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="@string/snackstext"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/card3"
                android:elevation="8dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ico_maindish" />

            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="@string/hottext"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/card4"
                android:elevation="8dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ico_soup" />

            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="@string/souptext"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>