<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f5f8"
    tools:context=".StartActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#b8d7f5"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="Как пользоваться?"
            android:textColor="#605687"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/info_text"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="193dp"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/info_text2"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/filledButton"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="280dp"
            android:layout_height="70dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="#b8d7f5"
            android:elevation="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/acceptBtn"
            android:textColor="#605687"
            android:textSize="22sp"
            app:iconGravity="start"
            app:iconSize="27dp"
            android:layout_gravity="center"
            app:iconTint="#605687"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>